Edit and Cancel buttons are modal specific

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -28,8 +28,9 @@
                             <button type="button" class="display-userID">getUserId()</button>-->
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Meats</i></h1>
-                            <span class="edit-button">Edit</span>
-                            <span class="delete-button">Delete</span>
+                            <span id="edit-button-meats">Edit</span>
+                            <span id="cancel-button-meats" class="disabled hidden">Cancel</span>
+                            <span id="delete-button-meats">Delete</span>
                             <img id="plus-meats" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-meats">
@@ -59,8 +60,9 @@
                             <!--<button type="button" id="render-grains">Render Grains</button>-->
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Grains</i></h1>
-                            <span class="edit-button">Edit</span>
-                            <span class="delete-button">Delete</span>
+                            <span id="edit-button-grains">Edit</span>
+                            <span id="cancel-button-grains" class="disabled hidden">Cancel</span>
+                            <span id="delete-button-grains">Delete</span>
                             <img id="plus-grains" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-grains">
@@ -90,8 +92,9 @@
                             <!--<button type="button" id="render-dairy">Render Dairy</button>-->
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Dairy</i></h1>
-                            <span class="edit-button">Edit</span>
-                            <span class="delete-button">Delete</span>
+                            <span id="edit-button-dairy" class="">Edit</span>
+                            <span id="cancel-button-dairy" class="disabled hidden">Cancel</span>
+                            <span id="delete-button-dairy">Delete</span>
                             <img id="plus-dairy" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-dairy">
@@ -121,8 +124,9 @@
                             <!--<button type="button" id="render-fruits">Render Fruits</button>-->
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Fruits</i></h1>
-                            <span class="edit-button">Edit</span>
-                            <span class="delete-button">Delete</span>
+                            <span id="edit-button-fruits">Edit</span>
+                            <span id="cancel-button-fruits" class="disabled hidden">Cancel</span>
+                            <span id="delete-button-fruits">Delete</span>
                             <img id="plus-fruits" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-fruits">
@@ -152,9 +156,9 @@
                             <!--<button type="button" id="render-vegetables">Render Vegetables</button>-->
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Vegetables</i></h1>
-                            <span class="edit-button">Edit</span>
-                            <span class="cancel-button disabled hidden">Cancel</span>
-                            <span class="delete-button">Delete</span>
+                            <span id="edit-button-vegetables">Edit</span>
+                            <span id="cancel-button-vegetables" class="disabled hidden">Cancel</span>
+                            <span id="delete-button-vegetables">Delete</span>
                             <img id="plus-vegetables" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-vegetables">
