--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -17,28 +17,19 @@
 
 
     <div class="fridge_container">
-<<<<<<< HEAD
-        <img id="logout" src="../images/exit_swing.png" alt="logout" onclick = "logOut()"></a>
-=======
-        <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout"></a>
+
+        <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout" onclick = "logOut()"></a>
         <img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/>
->>>>>>> 59b77c012850ad7f02fda6bfafc9cae1eadde0ed
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header modal-header-meats">
-<<<<<<< HEAD
-                            <button type="button" class="display-data">Get Data</button>
-                            <button type="button" class="display-users">Get Users</button>
-                            <button type="button" class="display-foods">Get Food Items</button>
-=======
                             <!--<button type="button" class="display-users">User Docs</button>
                             <button type="button" class="display-foods">Food Items SubCollection</button>
                             <button type="button" id="render-meats">Render Meats</button>
                             <button type="button" class="display-userID">getUserId()</button>-->
->>>>>>> 59b77c012850ad7f02fda6bfafc9cae1eadde0ed
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Meats</i></h1>
                             <span id="edit-button-meats">Edit</span>
@@ -194,52 +185,20 @@
             <!-- Modal -->
         </div>
 
-<<<<<<< HEAD
-<div class="references">Icons made by <a class="references"  href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-<div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-<div class="references">Icons made by <a class="references"  href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-<div class="references">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-<div class="references">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
-
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
-
-<!-- <script>
-=======
 <div class="hidden">Icons made by <a class="references"  href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="hidden">Icons made by <a class="references"  href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="hidden">Icons made by <a class="references"  href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="hidden">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="hidden">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
-<script>
->>>>>>> 59b77c012850ad7f02fda6bfafc9cae1eadde0ed
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyDATxhUzfa7mcLVwM02Cfrdi6ErXtRHDIg",
-      authDomain: "fridgedit-f8177.firebaseapp.com",
-      databaseURL: "https://fridgedit-f8177.firebaseio.com",
-      projectId: "fridgedit-f8177",
-      storageBucket: "fridgedit-f8177.appspot.com",
-      messagingSenderId: "252806401867"
-    };
-    firebase.initializeApp(config);
-<<<<<<< HEAD
-  </script> -->
+
 <!-- <script src="index1.js"></script> -->
 <script src="/scripts/Fridge.js"></script>
 <script src="//unpkg.com/navigo@6"></script>
 
 
 
-=======
-  </script>
-<script src="/scripts/Fridge.js"></script>
-<script src="//unpkg.com/navigo@6"></script>
-
->>>>>>> 59b77c012850ad7f02fda6bfafc9cae1eadde0ed
 </body>
 </html>
