--- a/Website/html/login.html
+++ b/Website/html/login.html
@@ -79,7 +79,7 @@
             <p id="message"></p> -->
 
 
-            <div class="alert1"> Passwords must be minimum 8 character and have atleast one upper case, one lower case, and one number! </div>
+            <div class="alert1"> Passwords must be minimum 8 characters and have atleast one upper case, one lower case, and one number! </div>
             <button type="submit" id="button-signUp" class ="aButton">Create Account</button>
 
         </div>
