--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <link href="../css/fridgepg3.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!-- <script src="/scripts/Fridge.js"></script>
-    <script src="index1.js"></script> -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
-
+  
   <body>
+
     <div class="fridge_container">
-        <img id="logout" src="../images/exit_swing.png" alt="logout" onclick = "logOut()"></a>
+        <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout"></a>
+        <img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/>
+            <!-- Modal MEATS-->
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
-            <!-- Modal -->
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -33,16 +33,26 @@
                             <span id="delete-button-meats">Delete</span>
                             <img id="plus-meats" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-meats">
+                            <div class="add-slider">
+                                <form>
+                                    <input type="text" name="category" value="Category"></br>
+                                    <input type="date" name="date" value="Date"></br>
+                                    <input type="text" name="market" value="Market"></br>
+                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                    <input type="submit" value="Done">
+                                </form>
+                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                        <div class="modal-footer-meats">
+                            <!--<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>-->
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
-            </div><!-- /.modal -->
+            </div><!-- /.modal MEATS -->
+
             <!-- Modal -->
-            <img id="toast" class="btn btn-wheat resize hover" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/>
+            <img id="toast" class="btn btn-grains resize hover" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -56,9 +66,18 @@
                             <span id="delete-button-grains">Delete</span>
                             <img id="plus-grains" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-grains">
+                            <div class="add-slider">
+                                <form>
+                                    <input type="text" name="category" value="Category"></br>
+                                    <input type="date" name="date" value="Date"></br>
+                                    <input type="text" name="market" value="Market"></br>
+                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                    <input type="submit" value="Done">
+                                </form>
+                            </div>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-grains">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -79,16 +98,25 @@
                             <span id="delete-button-dairy">Delete</span>
                             <img id="plus-dairy" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-dairy">
+                            <div class="add-slider">
+                                <form>
+                                    <input type="text" name="category" value="Category"></br>
+                                    <input type="date" name="date" value="Date"></br>
+                                    <input type="text" name="market" value="Market"></br>
+                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                    <input type="submit" value="Done">
+                                </form>
+                            </div>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-dairy">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <img id="apple" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="../images/apple.png" alt="fruit"/>
+            <img id="apple" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="../images/bananas.png" alt="fruit"/>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -102,9 +130,18 @@
                             <span id="delete-button-fruits">Delete</span>
                             <img id="plus-fruits" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-fruits">
+                            <div class="add-slider">
+                                <form>
+                                    <input type="text" name="category" value="Category"></br>
+                                    <input type="date" name="date" value="Date"></br>
+                                    <input type="text" name="market" value="Market"></br>
+                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                    <input type="submit" value="Done">
+                                </form>
+                            </div>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-fruits">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -125,9 +162,18 @@
                             <span id="delete-button-vegetables">Delete</span>
                             <img id="plus-vegetables" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body-vegetables">
+                            <div class="add-slider">
+                                <form>
+                                    <input type="text" name="category" value="Category"></br>
+                                    <input type="date" name="date" value="Date"></br>
+                                    <input type="text" name="market" value="Market"></br>
+                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                    <input type="submit" value="Done">
+                                </form>
+                             </div>
                         </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer-vegetables">
                             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
                         </div>
                     </div><!-- /.modal-content -->
@@ -142,12 +188,9 @@
 <div class="hidden">Icons made by><a class="references" href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 <div class="hidden">Icons made by><a class="references" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
-
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
-
-<!-- <script>
+<script>
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyDATxhUzfa7mcLVwM02Cfrdi6ErXtRHDIg",
@@ -158,8 +201,7 @@
       messagingSenderId: "252806401867"
     };
     firebase.initializeApp(config);
-  </script> -->
-<!-- <script src="index1.js"></script> -->
+  </script>
 <script src="../scripts/Fridge.js"></script>
 </body>
 </html>
