--- a/Website/html/login.html
+++ b/Website/html/login.html
@@ -79,23 +79,11 @@
             <p id="message"></p> -->
 
 
-            <div class="alert1"> Passwords must be minimum 8 character and have atleast one upper case, one lower case, and one number! </div>
+            <div class="alert1"> Passwords must be minimum 8 characters and have atleast one upper case, one lower case, and one number! </div>
             <button type="submit" id="button-signUp" class ="aButton">Create Account</button>
 
         </div>
      </div>
-<<<<<<< HEAD
-      
-    
-
-     <div class="login-form">
-        <form id="registration1" onsubmit="return onLogin();">
-            <img class="img" src="../images/email.png" alt="Email"><span>&emsp;</span><input type="email" placeholder="Email Address" id="login-email" class="input" required="required"><br>
-            <img class="img" src="../images/key.png" alt="Key"><span>&emsp;</span><input type="password" placeholder="Password" id="login-pass" class="input" required="required"><br>
-            <button type="submit" value="Login" id="btnLogin"></button>
-            <span><a href="#">Forgot Password</a></span>
-        </form>
-=======
 
 
 
@@ -106,7 +94,6 @@
             <button type="submit" id="btnLogin" class = "aButton">Login</button>
             <span><a href="https://media.giphy.com/media/FgjKGypLCAety/giphy.gif">Forgot Password</a></span>
         </div>
->>>>>>> sakis-feature
      </div>
      <div id="egg">
        <img src="../images/egg.jpg" height="400" width="400">
@@ -194,24 +181,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
-<<<<<<< HEAD
-    <script>
-  // Initialize Firebase
-    var config = {
-    apiKey: "AIzaSyDATxhUzfa7mcLVwM02Cfrdi6ErXtRHDIg",
-    authDomain: "fridgedit-f8177.firebaseapp.com",
-    databaseURL: "https://fridgedit-f8177.firebaseio.com",
-    projectId: "fridgedit-f8177",
-    storageBucket: "fridgedit-f8177.appspot.com",
-    messagingSenderId: "252806401867"
-  };
-  firebase.initializeApp(config);
-    </script>
-    <script src = "../scripts/index1.js"></script>
-    <script src="../scripts/Fridge.js"></script>
-=======
 
     <script src = "index1.js"></script>
->>>>>>> sakis-feature
 </body>
 </html>
