--- a/Website/html/fridge_scanner.html
+++ b/Website/html/fridge_scanner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <title>Upload Receipt</title>
     <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
     <link rel="stylesheet" type="text/css" href="../css/fridge_scanner.css">
@@ -10,12 +10,14 @@
       <!-- SIDE NAV -->
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">Home</a>
         <a href="fridgepg3.html">Your Fridge</a> <!-- LINK PAGES -->
-        <a href="fridge_scanner.html">About Us</a>
+        <a href="#">Facts</a>
+        <a href="#">About Us</a>
       </div>
 
-      <!-- <div id="main"> -->
-        <span onclick="openNav()" id="menu">&#9776; Menu</span>
+      <div id="main">
+        <span onclick="openNav()">&#9776; Menu</span>
       <!-- MENU BUTTON FOR SIDE NAV -->
 
       <!-- HERO HEADER -->
@@ -26,16 +28,15 @@
       </div>
 
       <!-- DIV TO UPLOAD PHOTO -->
-      <div class="main">
-        <h2><span>How-To: </span></h2>
-        <p>We understand that you're always on the go. To make things easier for you, follow these steps: </p>
-        <ol>
-          <li>Save your receipts.</li>
-          <li>Snap a picture of it! We recommend using apps like Evernote Scannable to help get the best results.</li>
-          <li>Upload your photo using the "Choose File" button below.</li>
-          <li>Return back to your fridge and see your food items!</li>
-        </ol>
-      </div>
+
+      <h2><span>Receipt Upload </span></h2>
+      <p>We understand that you're always on the go. To make things easier for you, follow these steps: </p>
+      <ol>
+        <li>Save your receipts.</li>
+        <li>Snap a picture of it! We recommend using apps like Evernote Scannable to help get the best results.</li>
+        <li>Upload your photo using the "Choose File" button below.</li>
+        <li>Return back to your fridge and see your food items!</li>
+      </ol>
       <hr />
 
       <h2>Upload Your Receipt: </h2>
@@ -52,9 +53,13 @@
       <div id = "ocr_status"></div> -->
 
 
-      <p>
-        [Insert Google Vision here]
-      </p>
+      <label for=fileInput>Choose your receipt:</label>
+      <br>
+      <br>
+      <input type="file" id="fileInput" name="fileInput"/>
+
+      <div id="document-content"></div>
+      <div id="ocr_status"></div>
     </div>
 
     <!-- TESSERACT SCRIPT TO PARSE RECEIPT -->
