Plus button image changed, modal plus buttons are specific to their category's form, Styled plus buttons with hover and active states

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -30,10 +30,10 @@
                             <span id="cancel-button-meats" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Meats</i></h1>
-                            <img id="plus-meats" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
+                            <img id="plus-meats" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-meats">
-                            <div class="add-slider">
+                            <div id="add-slider-meats">
                                 <form>
                                     <input type="text" name="category" value="Category"></br>
                                     <input type="date" name="date" value="Date"></br>
@@ -45,6 +45,7 @@
                         </div>
                         <div class="modal-footer-meats">
                             <span id="delete-button-meats">Delete</span>
+                            <span id="select-all-meats">Select All</span>
                             <!--<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>-->
                         </div>
                     </div><!-- /.modal-content -->
@@ -63,10 +64,10 @@
                             <span id="cancel-button-grains" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Grains</i></h1>
-                            <img id="plus-grains" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
+                            <img id="plus-grains" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-grains">
-                            <div class="add-slider">
+                            <div id="add-slider-grains">
                                 <form>
                                     <input type="text" name="category" value="Category"></br>
                                     <input type="date" name="date" value="Date"></br>
@@ -78,6 +79,7 @@
                         </div>
                         <div class="modal-footer-grains">
                             <span id="delete-button-grains">Delete</span>
+                            <span id="select-all-grains">Select All</span>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
@@ -94,10 +96,10 @@
                             <span id="cancel-button-dairy" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Dairy</i></h1>
-                            <img id="plus-dairy" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
+                            <img id="plus-dairy" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-dairy">
-                            <div class="add-slider">
+                            <div id="add-slider-dairy" class="add-slider">
                                 <form>
                                     <input type="text" name="category" value="Category"></br>
                                     <input type="date" name="date" value="Date"></br>
@@ -109,6 +111,7 @@
                         </div>
                         <div class="modal-footer-dairy">
                             <span id="delete-button-dairy">Delete</span>
+                            <span id="select-all-dairy">Select All</span>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
@@ -125,10 +128,10 @@
                             <span id="cancel-button-fruits" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Fruits</i></h1>
-                            <img id="plus-fruits" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
+                            <img id="plus-fruits" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-fruits">
-                            <div class="add-slider">
+                            <div id="add-slider-fruits">
                                 <form>
                                     <input type="text" name="category" value="Category"></br>
                                     <input type="date" name="date" value="Date"></br>
@@ -140,6 +143,7 @@
                         </div>
                         <div class="modal-footer-fruits">
                             <span id="delete-button-fruits">Delete</span>
+                            <span id="select-all-fruits">Select All</span>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
@@ -156,10 +160,10 @@
                             <span id="cancel-button-vegetables" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Vegetables</i></h1>
-                            <img id="plus-vegetables" class="btn add" data-toggle="modal" src="../images/plus-grey.png" alt="manually add foods"/>
+                            <img id="plus-vegetables" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-vegetables">
-                            <div class="add-slider">
+                            <div id="add-slider-vegetables">
                                 <form>
                                     <input type="text" name="category" value="Category"></br>
                                     <input type="date" name="date" value="Date"></br>
@@ -171,6 +175,7 @@
                         </div>
                         <div class="modal-footer-vegetables">
                             <span id="delete-button-vegetables">Delete</span>
+                            <span id="select-all-vegetables">Select All</span>
                         </div>
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
